baml_language/crates/baml_tests/snapshots/catch_throw/baml_tests__catch_throw__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.AlsoMayFail(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw "secondary error", _ => "also ok" }
}
function user.CatchAndRethrow(x: int) -> string  [expr] {
  {  } MayFail(x) catch (e) { _ => throw e }
}
function user.CatchWithFallback(x: int) -> string  [expr] {
  {  } MayFailIntOrString(x) catch (e) { _: string => "caught string" } catch (e2) { _: int => "caught int fallback" }
}
function user.CatchWithTypedArm(x: int) -> string  [expr] {
  {  } MayFail(x) catch (e) { _: string => "caught string" }
}
function user.ChainedCatchClauses(x: int) -> string  [expr] {
  {  } MayFailIntOrString(x) catch (e) { _: string => "first handler" } catch (e2) { _: int => "second handler" }
}
function user.MayFail(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw "string error", _ => "ok" }
}
function user.MayFailIntOrString(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw "string error", 1 => throw 1, _ => "ok" }
}
function user.MultipleCatchArms(x: int) -> string  [expr] {
  {  } MayFailIntOrString(x) catch (e) { _: string => "caught string", _: int => "caught int" }
}
function user.NestedCatch(x: int) -> string  [expr] {
  { let inner = MayFail(x) catch (e) { _ => "inner caught" } } AlsoMayFail(x) catch (e) { _ => inner }
}
function user.SingleCatchTyped(x: int) -> string  [expr] {
  {  } MayFail(x) catch (e) { _: string => "caught string" }
}
function user.SingleCatchWildcard(x: int) -> string  [expr] {
  {  } MayFail(x) catch (e) { _ => "caught" }
}
function user.ThrowStatement(x: int) -> string  [expr] {
  { throw "error" } "unreachable"
}
