baml_language/crates/baml_tests/snapshots/catch_throw/baml_tests__catch_throw__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR ===
fn CatchWithTypedArm(x: int) -> string {
    // Locals:
    let _0: string // return
    let _1: int // x // param
    let _2: unknown
    let _3: unknown // e
    let _4: bool
    let _5: (int) -> string
    let _6: int

    bb0: {
        _5 = const fn MayFail;
        _6 = copy _1;
        _0 = call copy _5(copy _6) -> [bb7, unwind: bb3];
    }

    bb1: {
        return;
    }

    bb2: {
        goto -> bb1;
    }

    bb3: {
        _3 = copy _2;
        _4 = is_type(copy _2, String);
        branch copy _4 -> [bb6, bb4];
    }

    bb4: {
        throw copy _2;
    }

    bb5: {
        _0 = const "caught string";
        goto -> bb2;
    }

    bb6: {
        goto -> bb5;
    }

    bb7: {
        goto -> bb2;
    }
}

fn CatchAndRethrow(x: int) -> string {
    // Locals:
    let _0: string // return
    let _1: int // x // param
    let _2: unknown
    let _3: unknown // e
    let _4: string
    let _5: (int) -> string
    let _6: int

    bb0: {
        _5 = const fn MayFail;
        _6 = copy _1;
        _0 = call copy _5(copy _6) -> [bb7, unwind: bb3];
    }

    bb1: {
        return;
    }

    bb2: {
        goto -> bb1;
    }

    bb3: {
        _3 = copy _2;
        goto -> bb5;
    }

    bb4: {
        throw copy _2;
    }

    bb5: {
        _4 = copy _3;
        throw copy _4;
    }

    bb6: {
        _0 = const null;
        goto -> bb2;
    }

    bb7: {
        goto -> bb2;
    }
}

fn ChainedCatchClauses(x: int) -> string {
    // Locals:
    let _0: string // return
    let _1: int // x // param
    let _2: unknown
    let _3: unknown
    let _4: unknown // e2
    let _5: bool
    let _6: unknown // e
    let _7: bool
    let _8: (int) -> string
    let _9: int

    bb0: {
        _8 = const fn MayFailIntOrString;
        _9 = copy _1;
        _0 = call copy _8(copy _9) -> [bb11, unwind: bb3];
    }

    bb1: {
        return;
    }

    bb2: {
        goto -> bb1;
    }

    bb3: {
        _6 = copy _2;
        _7 = is_type(copy _2, String);
        branch copy _7 -> [bb10, bb8];
    }

    bb4: {
        _4 = copy _3;
        _5 = is_type(copy _3, Int);
        branch copy _5 -> [bb7, bb5];
    }

    bb5: {
        throw copy _3;
    }

    bb6: {
        _0 = const "second handler";
        goto -> bb2;
    }

    bb7: {
        goto -> bb6;
    }

    bb8: {
        _3 = copy _2;
        goto -> bb4;
    }

    bb9: {
        _0 = const "first handler";
        goto -> bb2;
    }

    bb10: {
        goto -> bb9;
    }

    bb11: {
        goto -> bb2;
    }
}

fn SingleCatchWildcard(x: int) -> string {
    // Locals:
    let _0: string // return
    let _1: int // x // param
    let _2: unknown
    let _3: unknown // e
    let _4: (int) -> string
    let _5: int

    bb0: {
        _4 = const fn MayFail;
        _5 = copy _1;
        _0 = call copy _4(copy _5) -> [bb6, unwind: bb3];
    }

    bb1: {
        return;
    }

    bb2: {
        goto -> bb1;
    }

    bb3: {
        _3 = copy _2;
        goto -> bb5;
    }

    bb4: {
        throw copy _2;
    }

    bb5: {
        _0 = const "caught";
        goto -> bb2;
    }

    bb6: {
        goto -> bb2;
    }
}

fn ThrowStatement(x: int) -> string {
    // Locals:
    let _0: string // return
    let _1: int // x // param
    let _2: void
    let _3: "error"

    bb0: {
        _3 = const "error";
        throw copy _3;
    }

    bb1: {
        return;
    }

    bb2: {
        _2 = const null;
        _0 = const "unreachable";
        goto -> bb1;
    }
}

fn MayFailIntOrString(x: int) -> string {
    // Locals:
    let _0: string // return
    let _1: int // x // param
    let _2: "string error"
    let _3: 1

    bb0: {
        switch copy _1 [0: bb3, 1: bb4, otherwise: bb5];
    }

    bb1: {
        return;
    }

    bb2: {
        goto -> bb1;
    }

    bb3: {
        _2 = const "string error";
        throw copy _2;
    }

    bb4: {
        _3 = const 1_i64;
        throw copy _3;
    }

    bb5: {
        _0 = const "ok";
        goto -> bb2;
    }

    bb6: {
        _0 = const null;
        goto -> bb2;
    }

    bb7: {
        _0 = const null;
        goto -> bb2;
    }
}

fn MayFail(x: int) -> string {
    // Locals:
    let _0: string // return
    let _1: int // x // param
    let _2: "string error"

    bb0: {
        switch copy _1 [0: bb3, otherwise: bb4];
    }

    bb1: {
        return;
    }

    bb2: {
        goto -> bb1;
    }

    bb3: {
        _2 = const "string error";
        throw copy _2;
    }

    bb4: {
        _0 = const "ok";
        goto -> bb2;
    }

    bb5: {
        _0 = const null;
        goto -> bb2;
    }
}

fn SingleCatchTyped(x: int) -> string {
    // Locals:
    let _0: string // return
    let _1: int // x // param
    let _2: unknown
    let _3: unknown // e
    let _4: bool
    let _5: (int) -> string
    let _6: int

    bb0: {
        _5 = const fn MayFail;
        _6 = copy _1;
        _0 = call copy _5(copy _6) -> [bb7, unwind: bb3];
    }

    bb1: {
        return;
    }

    bb2: {
        goto -> bb1;
    }

    bb3: {
        _3 = copy _2;
        _4 = is_type(copy _2, String);
        branch copy _4 -> [bb6, bb4];
    }

    bb4: {
        throw copy _2;
    }

    bb5: {
        _0 = const "caught string";
        goto -> bb2;
    }

    bb6: {
        goto -> bb5;
    }

    bb7: {
        goto -> bb2;
    }
}

fn AlsoMayFail(x: int) -> string {
    // Locals:
    let _0: string // return
    let _1: int // x // param
    let _2: "secondary error"

    bb0: {
        switch copy _1 [0: bb3, otherwise: bb4];
    }

    bb1: {
        return;
    }

    bb2: {
        goto -> bb1;
    }

    bb3: {
        _2 = const "secondary error";
        throw copy _2;
    }

    bb4: {
        _0 = const "also ok";
        goto -> bb2;
    }

    bb5: {
        _0 = const null;
        goto -> bb2;
    }
}

fn NestedCatch(x: int) -> string {
    // Locals:
    let _0: string // return
    let _1: int // x // param
    let _2: string | "inner caught" // inner
    let _3: unknown
    let _4: unknown // e
    let _5: (int) -> string
    let _6: int
    let _7: unknown
    let _8: unknown // e
    let _9: (int) -> string
    let _10: int

    bb0: {
        _5 = const fn MayFail;
        _6 = copy _1;
        _2 = call copy _5(copy _6) -> [bb6, unwind: bb3];
    }

    bb1: {
        return;
    }

    bb2: {
        _9 = const fn AlsoMayFail;
        _10 = copy _1;
        _0 = call copy _9(copy _10) -> [bb11, unwind: bb8];
    }

    bb3: {
        _4 = copy _3;
        goto -> bb5;
    }

    bb4: {
        throw copy _3;
    }

    bb5: {
        _2 = const "inner caught";
        goto -> bb2;
    }

    bb6: {
        goto -> bb2;
    }

    bb7: {
        goto -> bb1;
    }

    bb8: {
        _8 = copy _7;
        goto -> bb10;
    }

    bb9: {
        throw copy _7;
    }

    bb10: {
        _0 = copy _2;
        goto -> bb7;
    }

    bb11: {
        goto -> bb7;
    }
}

fn CatchWithFallback(x: int) -> string {
    // Locals:
    let _0: string // return
    let _1: int // x // param
    let _2: unknown
    let _3: unknown
    let _4: unknown // e2
    let _5: bool
    let _6: unknown // e
    let _7: bool
    let _8: (int) -> string
    let _9: int

    bb0: {
        _8 = const fn MayFailIntOrString;
        _9 = copy _1;
        _0 = call copy _8(copy _9) -> [bb11, unwind: bb3];
    }

    bb1: {
        return;
    }

    bb2: {
        goto -> bb1;
    }

    bb3: {
        _6 = copy _2;
        _7 = is_type(copy _2, String);
        branch copy _7 -> [bb10, bb8];
    }

    bb4: {
        _4 = copy _3;
        _5 = is_type(copy _3, Int);
        branch copy _5 -> [bb7, bb5];
    }

    bb5: {
        throw copy _3;
    }

    bb6: {
        _0 = const "caught int fallback";
        goto -> bb2;
    }

    bb7: {
        goto -> bb6;
    }

    bb8: {
        _3 = copy _2;
        goto -> bb4;
    }

    bb9: {
        _0 = const "caught string";
        goto -> bb2;
    }

    bb10: {
        goto -> bb9;
    }

    bb11: {
        goto -> bb2;
    }
}

fn MultipleCatchArms(x: int) -> string {
    // Locals:
    let _0: string // return
    let _1: int // x // param
    let _2: unknown
    let _3: unknown // e
    let _4: bool
    let _5: bool
    let _6: (int) -> string
    let _7: int

    bb0: {
        _6 = const fn MayFailIntOrString;
        _7 = copy _1;
        _0 = call copy _6(copy _7) -> [bb10, unwind: bb3];
    }

    bb1: {
        return;
    }

    bb2: {
        goto -> bb1;
    }

    bb3: {
        _3 = copy _2;
        _4 = is_type(copy _2, String);
        branch copy _4 -> [bb7, bb6];
    }

    bb4: {
        throw copy _2;
    }

    bb5: {
        _0 = const "caught string";
        goto -> bb2;
    }

    bb6: {
        _5 = is_type(copy _2, Int);
        branch copy _5 -> [bb9, bb4];
    }

    bb7: {
        goto -> bb5;
    }

    bb8: {
        _0 = const "caught int";
        goto -> bb2;
    }

    bb9: {
        goto -> bb8;
    }

    bb10: {
        goto -> bb2;
    }
}
