baml_language/crates/baml_tests/snapshots/catch_throw/baml_tests__catch_throw__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn CatchWithTypedArm(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown
    let _3: bool

    bb0: {
        _0 = call const fn user.MayFail(copy _1) -> [bb4, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr(None) });
        branch copy _3 -> [bb3, bb2];
    }

    bb2: {
        throw copy _2;
    }

    bb3: {
        _0 = const "caught string";
        goto -> bb5;
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        goto -> bb6;
    }

    bb6: {
        return;
    }
}

fn MayFailIntOrString(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param

    bb0: {
        switch copy _1 [0: bb5, 1: bb4, otherwise: bb1];
    }

    bb1: {
        _0 = const "ok";
        goto -> bb2;
    }

    bb2: {
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        throw const 1_i64;
    }

    bb5: {
        throw const "string error";
    }
}

fn SingleCatchWildcard(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown

    bb0: {
        _0 = call const fn user.MayFail(copy _1) -> [bb3, unwind: bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        _0 = const "caught";
        goto -> bb4;
    }

    bb3: {
        goto -> bb4;
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn CatchAndRethrow(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown
    let _3: string // e
    let _4: string

    bb0: {
        _0 = call const fn user.MayFail(copy _1) -> [bb3, unwind: bb1];
    }

    bb1: {
        _3 = copy _2;
        goto -> bb2;
    }

    bb2: {
        _4 = copy _3;
        throw copy _4;
    }

    bb3: {
        goto -> bb4;
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn CatchWithFallback(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown
    let _3: bool
    let _4: bool

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb6, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr(None) });
        branch copy _3 -> [bb5, bb2];
    }

    bb2: {
        _4 = is_type(copy _2, Int { attr: TyAttr(None) });
        branch copy _4 -> [bb4, bb3];
    }

    bb3: {
        throw copy _2;
    }

    bb4: {
        _0 = const "caught int fallback";
        goto -> bb7;
    }

    bb5: {
        _0 = const "caught string";
        goto -> bb7;
    }

    bb6: {
        goto -> bb7;
    }

    bb7: {
        goto -> bb8;
    }

    bb8: {
        return;
    }
}

fn ThrowStatement(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param

    bb0: {
        throw const "error";
    }
}

fn SingleCatchTyped(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown
    let _3: bool

    bb0: {
        _0 = call const fn user.MayFail(copy _1) -> [bb4, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr(None) });
        branch copy _3 -> [bb3, bb2];
    }

    bb2: {
        throw copy _2;
    }

    bb3: {
        _0 = const "caught string";
        goto -> bb5;
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        goto -> bb6;
    }

    bb6: {
        return;
    }
}

fn NestedCatch(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: string | "inner caught" // inner
    let _3: unknown
    let _4: unknown

    bb0: {
        _2 = call const fn user.MayFail(copy _1) -> [bb3, unwind: bb1];
    }

    bb1: {
        goto -> bb2;
    }

    bb2: {
        _2 = const "inner caught";
        goto -> bb4;
    }

    bb3: {
        goto -> bb4;
    }

    bb4: {
        _0 = call const fn user.AlsoMayFail(copy _1) -> [bb7, unwind: bb5];
    }

    bb5: {
        goto -> bb6;
    }

    bb6: {
        _0 = copy _2;
        goto -> bb8;
    }

    bb7: {
        goto -> bb8;
    }

    bb8: {
        goto -> bb9;
    }

    bb9: {
        return;
    }
}

fn ChainedCatchClauses(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown
    let _3: bool
    let _4: bool

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb6, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr(None) });
        branch copy _3 -> [bb5, bb2];
    }

    bb2: {
        _4 = is_type(copy _2, Int { attr: TyAttr(None) });
        branch copy _4 -> [bb4, bb3];
    }

    bb3: {
        throw copy _2;
    }

    bb4: {
        _0 = const "second handler";
        goto -> bb7;
    }

    bb5: {
        _0 = const "first handler";
        goto -> bb7;
    }

    bb6: {
        goto -> bb7;
    }

    bb7: {
        goto -> bb8;
    }

    bb8: {
        return;
    }
}

fn MayFail(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param

    bb0: {
        switch copy _1 [0: bb4, otherwise: bb1];
    }

    bb1: {
        _0 = const "ok";
        goto -> bb2;
    }

    bb2: {
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        throw const "string error";
    }
}

fn MultipleCatchArms(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown
    let _3: bool
    let _4: bool

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb6, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, String { attr: TyAttr(None) });
        branch copy _3 -> [bb5, bb2];
    }

    bb2: {
        _4 = is_type(copy _2, Int { attr: TyAttr(None) });
        branch copy _4 -> [bb4, bb3];
    }

    bb3: {
        throw copy _2;
    }

    bb4: {
        _0 = const "caught int";
        goto -> bb7;
    }

    bb5: {
        _0 = const "caught string";
        goto -> bb7;
    }

    bb6: {
        goto -> bb7;
    }

    bb7: {
        goto -> bb8;
    }

    bb8: {
        return;
    }
}

fn AlsoMayFail(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param

    bb0: {
        switch copy _1 [0: bb4, otherwise: bb1];
    }

    bb1: {
        _0 = const "also ok";
        goto -> bb2;
    }

    bb2: {
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        throw const "secondary error";
    }
}
